# medic-ext-rust

./: Brewfile  CHANGELOG.md  Cargo.toml  README.md
.config/: medic.toml
.github/workflows/: pipeline.yml  pkg.yml
.medic/: config.toml
medic-check-rust/: Cargo.toml
medic-check-rust/src/: lib.rs  main.rs
medic-check-rust/src/cli/: app.rs
medic-outdated-rust/: Cargo.toml
medic-outdated-rust/src/: lib.rs  main.rs
medic-outdated-rust/src/cli/: app.rs
medic-outdated-rust/src/outdated/: mod.rs
medic-step-rust/: Cargo.toml
medic-step-rust/src/: lib.rs
