[package]
name = "medic-check-rust"
version = "0.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
indoc = { workspace = true }
itertools = { workspace = true }
medic-lib = { workspace = true }
regex = { workspace = true }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
