[package]
name = "medic-check-rust"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true


[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
indoc = { workspace = true }
itertools = { workspace = true }
medic-lib = { workspace = true }
regex = { workspace = true }
which = { workspace = true }


[features]
default = ["strict"] # Treat warnings as a build error.
strict = []
