[package]
name = "medic-outdated-rust"
authors.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true


[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
fancy-regex = { workspace = true }
indoc = { workspace = true }
medic-lib = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
which = { workspace = true }


[features]
default = ["strict"] # Treat warnings as a build error.
strict = []
