[package]
name = "medic-step-rust"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true, features = ["derive", "cargo", "wrap_help", "env", "unicode" ] }
indoc = { workspace = true }
medic-lib = { workspace = true }

[features]
# Treat warnings as a build error.
default = ["strict"]
strict = []
